Fix horizontal scroll

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,5 +1,5 @@
 header {
-  width: 100vw;
+  width: 100%;
 }
 header .nav-top, .nav-bottom {
   margin-right: auto;
